@@ -1,3 +1,14 @@
+2004-10-15  Dalibor Topic <robilad@kaffe.org>
+
+	* libraries/javalib/gnu/java/beans/ExplicitBeanInfo.java:
+        Resynced with GNU Classpath.
+
+	2004-10-13  Michael Koch  <konqueror@gmx.de>
+
+        * gnu/java/beans/ExplicitBeanInfo.java:
+        Explicitely import java.awt.Image.
+        (getIcon): Fixed off-by-one error.
+
 2004-10-14  Dalibor Topic <robilad@kaffe.org>
 
 	* libraries/javalib/java/awt/image/DataBufferByte.java,
